--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.6.0",
     "connect-mongo": "^2.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
@@ -39,6 +40,9 @@
     "mongoose": "^5.3.4",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "reactstrap": "^8.9.0"
   }
 }
