--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
     "reactstrap": "^8.9.0"
   }
