--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
+    "react-responsive-modal": "^6.0.1",
     "reactstrap": "^8.9.0",
     "request": "^2.88.2"
   }
